Fix z-index issue between carousel and contact-us components

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,4 +6,5 @@ div {
 #app-contact-us {
   position: sticky;
   bottom: 0;
+  z-index: 10; // CarouselComponent has prev/next arrows with z-index of 1
 }
